# ImageCapture

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CTestConfig.cmake  INSTALLATION.txt  ImageCaptureConfig.cmake.in  ImageCaptureConfigure.h.in  README.md  README.txt  UseImageCapture.cmake.in  appveyor.yml  rename.sh  setup.py
CMake/: CPackOptions.cmake.in  CPackSetup.cmake  CTestContinuous.cmake.in  CTestCustom.cmake.in  FindEigen.cmake  Findgflags.cmake.in  Findglog.cmake.in  StartVS.bat.in  SuperBuild.cmake  captureAddBoost.cmake  captureAddDocs.cmake  captureAddEigen.cmake  captureAddFLANN.cmake  captureAddGuiProjects.cmake  captureAddOpenCV.cmake  captureAddPCL.cmake  captureAddPythonBindings.cmake  captureAddUnityWrapper.cmake  captureAddVL.cmake  captureAddVTK.cmake  captureAddgflags.cmake  captureAddglog.cmake  captureExternalProjectHelperMacros.cmake  captureFunctionFixInstallNameForMac.cmake  captureIncludeBoost.cmake  captureIncludeCUDA.cmake  captureIncludeDocs.cmake  captureIncludeEigen.cmake  captureIncludeMPI.cmake  captureIncludeOpenCV.cmake  captureIncludeOpenMP.cmake  captureIncludePCL.cmake  captureIncludePythonBindings.cmake  captureIncludeQt.cmake  captureIncludeVL.cmake  captureIncludeVTK.cmake  captureIncludegflags.cmake  captureIncludeglog.cmake  captureMacroCreateGuiApplication.cmake  captureMacroInstallCommandLineApp.cmake  (+8 more)
CMake/ExternalProjects/: Boost.cmake  ChangeVLLibsInstallNameForMac.cmake.in  Eigen.cmake  FLANN.cmake  OpenCV.cmake  PCL.cmake  VL.cmake  VTK.cmake  gflags.cmake  glog.cmake
Code/: CMakeLists.txt
Code/CommandLineApps/: CMakeLists.txt  captureMyFirstApp.cpp
Code/GuiApps/: CMakeLists.txt
Code/GuiApps/QMLDemo/: CMakeLists.txt
Code/GuiApps/QMLDemo/App/: captureQOpenGLTriangleRenderer.cpp  captureQOpenGLTriangleRenderer.h  captureTriangleModel.cpp  captureTriangleModel.h  main.cpp
Code/GuiApps/QMLDemo/View/: main.qml
Code/GuiApps/QMLVLDemo/: CMakeLists.txt
Code/GuiApps/QMLVLDemo/App/: captureQMLVLOpenGLContext.cpp  captureQMLVLOpenGLContext.h  captureTriangleModel.cpp  captureTriangleModel.h  captureVLTriangleRenderer.cpp  captureVLTriangleRenderer.h  main.cpp
Code/GuiApps/QMLVLDemo/View/: main.qml
Code/GuiApps/QOpenGLDemo/: CMakeLists.txt  cameradetector.cpp  cameradetector.h  captureCameraWidget.cpp  captureCameraWidget.h  captureLabelImage.cpp  captureLabelImage.h  captureMainWidget.cpp  captureMainWidget.h  captureOpenGLImage.cpp  captureOpenGLImage.h  captureOpenGLMainWindow.cpp  captureOpenGLMainWindow.h  captureOpenGLWidget.cpp  captureOpenGLWidget.h  captureVideoFileSurface.cpp  captureVideoFileSurface.h  captureVideoOutput.cpp  captureVideoOutput.h  captureapplication.cpp  captureapplication.h  capturecontroller.cpp  capturecontroller.h  main.cpp  outputdisplaycontroller.cpp  outputdisplaycontroller.h  qvideoframewrapper.cpp  qvideoframewrapper.h  screencontroller.cpp  screencontroller.h  screenmapper.cpp  screenmapper.h
Code/GuiApps/QtVTKDemo/: CMakeLists.txt
Code/GuiApps/QtVTKDemo/App/: CMakeLists.txt  captureCentralWidget.cpp  captureCentralWidget.h  captureCentralWidget.ui  captureMainWindow.cpp  captureMainWindow.h  captureMainWindow.ui  main.cpp
Code/GuiApps/QtVTKDemo/Controller/: CMakeLists.txt  captureControlPanelWidget.cpp  captureControlPanelWidget.h  captureControlPanelWidget.ui  captureQtVTKControllerWin32ExportHeader.h  captureTwinSliderWidget.cpp  captureTwinSliderWidget.h
Code/GuiApps/QtVTKDemo/Model/: CMakeLists.txt  captureQtVTKModelWin32ExportHeader.h  captureVolumeRenderingModel.cpp  captureVolumeRenderingModel.h
Code/GuiApps/QtVTKDemo/View/: CMakeLists.txt  captureQtVTKViewWin32ExportHeader.h  captureVTKViewWidget.cpp  captureVTKViewWidget.h
Code/Lib/: CMakeLists.txt  captureBasicTypes.cpp  captureBasicTypes.h  captureException.cpp  captureException.h  captureExceptionMacro.h  captureMyFunctions.cpp  captureMyFunctions.h  captureWin32ExportHeader.h
Code/Lib/CaptureLib/: CMakeLists.txt  abstractimage.cpp  abstractimage.h  convert.cpp  convert.h  image.cpp  image.h
Code/Lib/PythonBoost/: CMakeLists.txt  captureLibPython.cpp
Code/Lib/PythonPyBind/: CMakeLists.txt  captureLibPython.cpp
Code/Lib/UnityWrapper/: CMakeLists.txt  captureUnityWrapper.cpp  captureUnityWrapper.h
Documentation/: CMakeLists.txt  License.dox  MainPage.dox.in
Documentation/Licenses/: VL.txt
Testing/: CMakeLists.txt  captureBasicTest.cpp  captureCatchMain.cpp  captureCatchMain.h  captureCommandLineArgsTest.cpp  mpCudaTest.cu
Utilities/CppCheck/: IMAGECAPTURECppCheck.cmake
Utilities/Doxygen/: doxygen.config.in  imagecapturedoxygen.pl.in
Utilities/KWStyle/: IMAGECAPTUREHeader.h  IMAGECAPTUREKWS.xml.in  IMAGECAPTUREKWStyle.cmake
